<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/item_list"
    tools:context=".ui.login.LoginActivity"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_card_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_margin="20dp"
        android:background="@drawable/login_card"
        tools:context=".ui.login.LoginActivity">


        <ImageView
            android:id="@+id/logoInsta"
            android:layout_width="217dp"
            android:layout_height="169dp"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/logo_text_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo_natigram"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/logoTextInsta"
            android:layout_width="217dp"
            android:layout_height="83dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logoInsta"
            app:srcCompat="@drawable/natigram_text"
            tools:ignore="MissingConstraints"
            android:contentDescription="@string/logo_text_placeholder" />

        <EditText
            android:id="@+id/username"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_marginTop="120dp"
            android:autofillHints=""
            android:background="@drawable/rounded_edit_text"
            android:padding="10dp"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            android:textColorHint="@color/primary_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/logoTextInsta" />

        <EditText
            android:id="@+id/password"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_marginTop="4dp"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:background="@drawable/rounded_edit_text"
            android:padding="10dp"
            android:textColorHint="@color/primary_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username"
            android:autofillHints="" />

        <Button
            android:id="@+id/login"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/primary_blue"
            android:text="@string/action_sign_in"
            android:textColor="@color/white"
            app:cornerRadius="6dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <TextView
            android:id="@+id/login_helper_label"
            android:layout_width="320dp"
            android:layout_height="25dp"
            android:layout_marginTop="16dp"
            android:text="@string/forgot_to_login_get_help_logging_in"
            android:textColor="@color/secondary_text"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login"
            />

        <TextView
            android:id="@+id/login_helper"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:textColor="@color/primary_blue"
            android:text="@string/login_with_google"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_helper_label"
            />

        <TextView
            android:id="@+id/signup_helper"
            android:layout_width="320dp"
            android:layout_height="25dp"
            android:layout_marginTop="16dp"
            android:text="@string/don_t_have_an_account_sign_up"
            android:textColor="@color/secondary_text"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_helper"
            />

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="64dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintStart_toStartOf="@+id/password"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
