<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/item_list"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/welcome_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_margin="20dp"
        android:background="@drawable/login_card"
        tools:context=".ui.login.LoginActivity">

    <ImageView
            android:id="@+id/logoInsta"
            android:layout_width="217dp"
            android:layout_height="169dp"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/logo_text_placeholder"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/logo_natigram" />

        <ImageView
            android:id="@+id/logoTextInsta"
            android:layout_width="217dp"
            android:layout_height="83dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/logoInsta"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/logoinsta_1"
            app:srcCompat="@drawable/natigram_text" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_button_text"
            android:onClick="redirectToLogin"
            app:layout_constraintTop_toBottomOf="@id/logoTextInsta"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="160dp"
            android:backgroundTint="@color/primary_blue"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
